Update gradient colors and fix it on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,6 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-image: linear-gradient($bg, $bg2);
 }
 
 html.theme-transition,
@@ -19,6 +18,7 @@ html.theme-transition *:after {
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 100%;
+  background-image: linear-gradient($bg, $bg, $bg2);
 }
 
 .content {
